gdpr checkbox alignment fix

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4188,7 +4188,7 @@ div#modal-user-management div.widget {
 
 .gdpr-table-checkbox-custom {
     padding-left: 0px !important;
-    display: block;
+    display: inline-flex;
     width: 23px;
 }
 
